--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -69,9 +69,11 @@ body
 .blue{
     border-top: 5px solid var(--Blue);
 }
-.card h3{
+.card h2{
     color: var(--Very-dark-blue);
     font-weight: 600;
+    font-size: 22px;
+    margin-bottom: 14px;
 }
 .card p{
     color: var(--Grayish-blue);
